add Cancel Sale, Report